--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "game-db": "git+ssh://git@github.com/andrew-all-proj/game-db.git",
     "grammy": "^1.35.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
@@ -23,7 +25,7 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.5.3",
-    "typescript": "^5.8.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
