--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "game-db": "git+ssh://git@github.com/andrew-all-proj/game-db.git",
+    "game-db": "git+ssh://git@github.com/andrew-all-proj/game-db.git#v0.1.2",
     "grammy": "^1.35.1",
     "nodemon": "^3.1.9",
     "typeorm": "^0.3.22"
