added express and routes

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ BOT_TOKEN=
 BOT_USER_NAME=
 URL_WEB_APP=
 
+PORT=
+
 DB_HOST=
 DB_PORT=
 DB_USER=
@@ -9,3 +11,6 @@ DB_PASSWORD=
 DB_NAME=
 
 GLOBAL_AGENT_HTTP_PROXY=
+
+NODE_ENV=
+WEBHOOK_URL=
