--- a/package.json
+++ b/package.json
@@ -12,21 +12,25 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "game-db": "git+ssh://git@github.com/andrew-all-proj/game-db.git#v0.1.3",
     "grammy": "^1.35.1",
     "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
-    "global-agent": "^3.0.0",
+    "@types/express": "^5.0.3",
     "@types/global-agent": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.14.0",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "global-agent": "^3.0.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
