--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
-    "typeorm": "^0.3.22"
+    "typeorm": "^0.3.22",
+    "winston": "^3.17.0",
+    "winston-elasticsearch": "^0.19.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
