added command monster

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,12 @@ DB_USER=
 DB_PASSWORD=
 DB_NAME=
 
+ELASTICSEARCH_NODE=
+ELASTIC_USERNAME=
+ELASTIC_PASSWORD=
+
+FILE_URL_PREFIX=
+
 GLOBAL_AGENT_HTTP_PROXY=
 
 NODE_ENV=
