--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemon": "^3.1.9",
     "typeorm": "^0.3.22",
     "winston": "^3.17.0",
-    "winston-elasticsearch": "^0.19.0"
+    "winston-elasticsearch": "^0.19.0",
+    "global-agent": "^3.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
@@ -33,7 +34,6 @@
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "global-agent": "^3.0.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
