--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "game-telegram-bot",
   "version": "0.0.1",
   "main": "src/index.js",
-  "repository": "git@github.com:andrew-all-proj/game-telegram-bot.git",
+  "repository": "https://github.com/andrew-all-proj/game-telegram-bot.git",
   "author": "Andrew <andrew.publik.mail@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
     "start": "nodemon --watch src --ext ts --exec \"tsc && node dist/index.js\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write 'src/**/*.{ts,tsx,js,json,md}'"
   },
   "dependencies": {
     "axios": "^1.12.2",
     "dotenv": "^16.4.7",
+    "eslint-plugin-prettier": "^5.5.4",
     "express": "^5.1.0",
-    "game-db": "git+ssh://git@github.com/andrew-all-proj/game-db.git#0.10.9",
+    "game-db": "git+https://github.com/andrew-all-proj/game-db.git#0.10.9",
     "grammy": "^1.35.1",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "typeorm": "^0.3.22",
+    "typescript-eslint": "^8.48.1",
     "winston": "^3.17.0",
     "winston-elasticsearch": "^0.19.0"
   },
