--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.4.7",
     "eslint-plugin-prettier": "^5.5.4",
     "express": "^5.1.0",
-    "game-db": "git+https://github.com/andrew-all-proj/game-db.git#0.10.9",
+    "game-db": "https://codeload.github.com/andrew-all-proj/game-db/tar.gz/0427eaaf57108e8e299bb6f8a66bc0f202d7be1c",
     "grammy": "^1.35.1",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
