DEV-41 added rabbitMQ

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,9 @@ WEBHOOK_URL=
 
 INTERNAL_JWT_SECRET=
 API_SERVICE_URL=
+
+RABBITMQ_USER=user
+RABBITMQ_PASSWORD=password
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_QUEUE=queue
